Pointed download to github.

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 <h3>Thread Safety</h3>
 <p><i><span class="RenoLink">Boost Synapse</span></i> is not yet thread-safe.</p>
 <h3>Download</h3>
-<p>Click <span class="RenoLink"><a href="http://www.revergestudios.com/boost-synapse/boost-synapse.zip">here</a></span> to download the source code and this documentation.</p>
+<p>See <span class="RenoLink"><a href="https://github.com/zajo/boost-synapse">this</a></span> github repo.</p>
 </div><!-- Copyright (c) 2008-2013 Emil Dotchevski and Reverge Studios, Inc. -->
 <!-- Distributed under the Boost Software License, Version 1.0. (See accompanying -->
 <!-- file LICENSE_1_0.txt or copy at http://www.boost.org/LICENSE_1_0.txt) -->
