--- a/block.html
+++ b/block.html
@@ -52,7 +52,7 @@ boost
 <h4>Example:</h4>
 <p>See "<span class="RenoLink"><a href="using_meta_signals_to_respond_to_signals_being_blocked_or_unblocked.html">Using Meta Signals to Respond to Signals Being Blocked or Unblocked</a></span>".</p>
 </div><div class="RenoAutoDIV"><div class="RenoHR"><hr/></div>
-See also: <span class="RenoPageList"><a href="blocker.html">blocker</a>&nbsp;| <a href="blocker_emitter.html">blocker::emitter</a>&nbsp;| <a href="boost_synapse_block_hpp.html">boost/synapse/block.hpp</a>&nbsp;| <a href="emit.html">emit</a>&nbsp;| <a href="meta_blocked.html">meta::blocked</a>&nbsp;| <a href="Tutorial.html">Tutorial</a>&nbsp;| <a href="using_meta_signals_to_respond_to_signals_being_blocked_or_unblocked.html">Using Meta Signals to Respond to Signals Being Blocked or Unblocked</a></span>
+See also: <span class="RenoPageList"><a href="index.html">Boost Synapse</a>&nbsp;| <a href="blocker.html">blocker</a>&nbsp;| <a href="blocker_emitter.html">blocker::emitter</a>&nbsp;| <a href="boost_synapse_block_hpp.html">boost/synapse/block.hpp</a>&nbsp;| <a href="emit.html">emit</a>&nbsp;| <a href="meta_blocked.html">meta::blocked</a>&nbsp;| <a href="Tutorial.html">Tutorial</a>&nbsp;| <a href="using_meta_signals_to_respond_to_signals_being_blocked_or_unblocked.html">Using Meta Signals to Respond to Signals Being Blocked or Unblocked</a></span>
 </div>
 <!-- Copyright (c) 2008-2013 Emil Dotchevski and Reverge Studios, Inc. -->
 <!-- Distributed under the Boost Software License, Version 1.0. (See accompanying -->
