--- a/Index_of_functions.html
+++ b/Index_of_functions.html
@@ -27,6 +27,8 @@
 <h3>c</h3>
 <p><a href="connect.html">connect</a></p>
 <p><a href="connection_emitter.html">connection::emitter</a></p>
+<p><a href="connection_set_user_data.html">connection::set_user_data</a></p>
+<p><a href="create_thread_local_queue.html">create_thread_local_queue</a></p>
 <h3>e</h3>
 <p><a href="emit.html">emit</a></p>
 <h3>m</h3>
