--- a/Index_of_headers.html
+++ b/Index_of_headers.html
@@ -32,6 +32,7 @@
 <h3>s</h3>
 <p><a href="boost_synapse_signal_traits_hpp.html">boost/synapse/signal_traits.hpp</a></p>
 <h3>t</h3>
+<p><a href="boost_synapse_thread_local_queue_hpp.html">boost/synapse/thread_local_queue.hpp</a></p>
 <p><a href="boost_synapse_translate_hpp.html">boost/synapse/translate.hpp</a></p>
 </div>
 </div><div class="RenoAutoDIV"><div class="RenoHR"><hr/></div>
