--- a/connection_emitter.html
+++ b/connection_emitter.html
@@ -33,7 +33,7 @@ shared_ptr&lt;T&gt; <span class="RenoLink">emitter</span>() const;</pre>
 <li> If the emitter was passed to <i><span class="RenoLink"><a href="connect.html">connect</a></span></i> (or <i><span class="RenoLink"><a href="translate.html">translate</a></span></i>) as a raw pointer, the returned <i>shared_ptr</i> points that emitter but does not (can not) keep it afloat.</li>
 </ul></div>
 </div><div class="RenoAutoDIV"><div class="RenoHR"><hr/></div>
-See also: <span class="RenoPageList"><a href="connect.html">connect</a>&nbsp;| <a href="connection.html">connection</a>&nbsp;| <a href="Tutorial.html">Tutorial</a>&nbsp;| <a href="using_meta_signals_to_respond_to_signals_being_blocked_or_unblocked.html">Using Meta Signals to Respond to Signals Being Blocked or Unblocked</a>&nbsp;| <a href="using_meta_signals_with_QPushButton.html">Using Meta Signals with QPushButton</a></span>
+See also: <span class="RenoPageList"><a href="connect.html">connect</a>&nbsp;| <a href="connection.html">connection</a>&nbsp;| <a href="Tutorial.html">Tutorial</a>&nbsp;| <a href="using_meta_signals_to_connect_to_a_C-style_callback_API.html">Using Meta Signals to Connect to a C-Style Callback API</a>&nbsp;| <a href="using_meta_signals_to_respond_to_signals_being_blocked_or_unblocked.html">Using Meta Signals to Respond to Signals Being Blocked or Unblocked</a>&nbsp;| <a href="using_meta_signals_with_QPushButton.html">Using Meta Signals with QPushButton</a></span>
 </div>
 <!-- Copyright (c) 2008-2013 Emil Dotchevski and Reverge Studios, Inc. -->
 <!-- Distributed under the Boost Software License, Version 1.0. (See accompanying -->
