--- a/Building.html
+++ b/Building.html
@@ -3,7 +3,7 @@
 <html xmlns='http://www.w3.org/1999/xhtml' xml:lang='en' lang='en'>
 <head>
 	<meta http-equiv='Content-Type' content='text/html; charset=utf-8'/>
-	<title>blocker::emitter</title>
+	<title>Building</title>
 	<link href='reno.css' type='text/css' rel='stylesheet'/>
 </head>
 <body>
@@ -19,21 +19,13 @@
 <!-- Copyright (c) 2015 Emil Dotchevski and Reverge Studios, Inc. -->
 <!-- Distributed under the Boost Software License, Version 1.0. (See accompanying -->
 <!-- file LICENSE_1_0.txt or copy at http://www.boost.org/LICENSE_1_0.txt) -->
-<div class="RenoIncludeDIV"><div class="RenoAutoDIV"><h3>blocker::emitter</h3>
+<div class="RenoIncludeDIV"><div class="RenoAutoDIV"><h3>Building</h3>
 </div>
-<div class="RenoIncludeDIV"><div class="RenoIncludeDIV"><pre>template &lt;class T&gt;
-shared_ptr&lt;T&gt; <span class="RenoLink">emitter</span>() const;</pre>
-</div></div><h4>Returns:</h4>
-<p>A <i>shared_ptr</i> that points the emitter that was passed to an overload of the <i><span class="RenoLink"><a href="block.html">block</a></span></i> function template to get the <i><span class="RenoLink"><a href="blocker.html">blocker</a></span></i> object.</p>
-<h4>Notes:</h4>
-<div><ul><li> An empty <i>shared_ptr</i> is returned if:<div><ul><li> <i>T</i> does not match the static type of the emitter passed to <i><span class="RenoLink"><a href="block.html">block</a></span></i>, or</li>
-<li> the emitter was passed to <i><span class="RenoLink"><a href="block.html">block</a></span></i> as a <i>shared/weak_ptr</i> and it has expired.</li>
-</ul></div>
-</li>
-<li> If the emitter was passed to <i><span class="RenoLink"><a href="block.html">block</a></span></i> as a raw pointer, the returned <i>shared_ptr</i> points that emitter but does not (can not) keep it afloat.</li>
-</ul></div>
+<p><i><span class="RenoLink"><a href="index.html">Boost Synapse</a></span></i> has been formatted to be submitted for a Boost review, so its directory structure follows the common directory structure for Boost libraries—and it's built with Boost Build.</p>
+<p>Alternatively, just put <i>connect.cpp</i> and either <i>thread_local_queue.cpp</i> or <i>interthread_stub.cpp</i> into your favorite build system, depending on whether or not your program calls <i><span class="RenoLink"><a href="create_thread_local_queue.html">create_thread_local_queue</a></span></i>. In addition if your program calls the <i><span class="RenoLink"><a href="block.html">block</a></span></i> function, you also need to compile and link <i>block.cpp</i>.</p>
+<p>However, note that if your program only emits signals (that is, it calls <i><span class="RenoLink"><a href="emit.html">emit</a></span></i> but it never creates any <i><span class="RenoLink"><a href="connection.html">connections</a></span></i>), there is no need to link any <i>.cpp</i> files; that is, <i><span class="RenoLink"><a href="boost_synapse_emit_hpp.html">boost/synapse/emit.hpp</a></span></i> by itself is an independent header-only library. This way libraries that emit signals do not require the user to link <i><span class="RenoLink"><a href="index.html">Boost Synapse</a></span></i>, unless he cares to connect them.</p>
 </div><div class="RenoAutoDIV"><div class="RenoHR"><hr/></div>
-See also: <span class="RenoPageList"><a href="blocker.html">blocker</a></span>
+See also: <span class="RenoPageList"><a href="index.html">Boost Synapse</a></span>
 </div>
 <!-- Copyright (c) 2008-2013 Emil Dotchevski and Reverge Studios, Inc. -->
 <!-- Distributed under the Boost Software License, Version 1.0. (See accompanying -->
