--- a/boost_synapse_emit_hpp.html
+++ b/boost_synapse_emit_hpp.html
@@ -33,7 +33,7 @@ boost
         }
     }</pre>
 </div></div><div class="RenoAutoDIV"><div class="RenoHR"><hr/></div>
-See also: <span class="RenoPageList"><a href="building_a_simple_logging_system.html">Building a Simple Logging System</a>&nbsp;| <a href="emit.html">emit</a>&nbsp;| <a href="Synopsis.html">Synopsis</a></span>
+See also: <span class="RenoPageList"><a href="Building.html">Building</a>&nbsp;| <a href="building_a_simple_logging_system.html">Building a Simple Logging System</a>&nbsp;| <a href="emit.html">emit</a>&nbsp;| <a href="Synopsis.html">Synopsis</a></span>
 </div>
 <!-- Copyright (c) 2008-2013 Emil Dotchevski and Reverge Studios, Inc. -->
 <!-- Distributed under the Boost Software License, Version 1.0. (See accompanying -->
