--- a/boost_synapse_thread_local_queue_hpp.html
+++ b/boost_synapse_thread_local_queue_hpp.html
@@ -3,7 +3,7 @@
 <html xmlns='http://www.w3.org/1999/xhtml' xml:lang='en' lang='en'>
 <head>
 	<meta http-equiv='Content-Type' content='text/html; charset=utf-8'/>
-	<title>connection::user_data</title>
+	<title>boost/synapse/thread_local_queue.hpp</title>
 	<link href='reno.css' type='text/css' rel='stylesheet'/>
 </head>
 <body>
@@ -19,13 +19,23 @@
 <!-- Copyright (c) 2015 Emil Dotchevski and Reverge Studios, Inc. -->
 <!-- Distributed under the Boost Software License, Version 1.0. (See accompanying -->
 <!-- file LICENSE_1_0.txt or copy at http://www.boost.org/LICENSE_1_0.txt) -->
-<div class="RenoIncludeDIV"><div class="RenoAutoDIV"><h3>connection::user_data</h3>
+<div class="RenoIncludeDIV"><div class="RenoAutoDIV"><h3>boost/synapse/thread_local_queue.hpp</h3>
 </div>
-<div class="RenoIncludeDIV"><div class="RenoIncludeDIV"><pre><span class="RenoLink"><a href="www.boost.org/doc/libs/release/doc/html/any.html">any</a></span> &amp; <span class="RenoLink">user_data</span>;</pre>
-</div></div><h4>Description:</h4>
-<p>This public member object can be used to store auxiliary information in <i><span class="RenoLink"><a href="connection.html">connection</a></span></i> objects.</p>
-</div><div class="RenoAutoDIV"><div class="RenoHR"><hr/></div>
-See also: <span class="RenoPageList"><a href="connection.html">connection</a>&nbsp;| <a href="Tutorial.html">Tutorial</a>&nbsp;| <a href="using_meta_signals_to_respond_to_signals_being_blocked_or_unblocked.html">Using Meta Signals to Respond to Signals Being Blocked or Unblocked</a>&nbsp;| <a href="using_meta_signals_with_QPushButton.html">Using Meta Signals with QPushButton</a></span>
+<div class="RenoIncludeDIV"><p><span class="RenoEscape">&#35;<!--<wiki>`&#35;</wiki>--></span>include &lt;<span class="RenoLink">boost/synapse/thread_local_queue.hpp</span>&gt;</p>
+<pre>namespace
+boost
+    {
+    namespace
+    synapse
+        {
+<span class="RenoIncludeSPAN">        <span class="RenoIncludeSPAN">shared_ptr&lt;thread_local_queue&gt;
+        <span class="RenoLink"><a href="create_thread_local_queue.html">create_thread_local_queue</a></span>();</span>        
+        
+        <span class="RenoIncludeSPAN">int <span class="RenoLink"><a href="poll.html">poll</a></span>( thread_local_queue &amp; q );</span></span>
+        }
+    }</pre>
+</div></div><div class="RenoAutoDIV"><div class="RenoHR"><hr/></div>
+See also: <span class="RenoPageList"><a href="create_thread_local_queue.html">create_thread_local_queue</a>&nbsp;| <a href="poll.html">poll</a>&nbsp;| <a href="Synopsis.html">Synopsis</a></span>
 </div>
 <!-- Copyright (c) 2008-2013 Emil Dotchevski and Reverge Studios, Inc. -->
 <!-- Distributed under the Boost Software License, Version 1.0. (See accompanying -->
