--- a/connection_set_user_data.html
+++ b/connection_set_user_data.html
@@ -3,7 +3,7 @@
 <html xmlns='http://www.w3.org/1999/xhtml' xml:lang='en' lang='en'>
 <head>
 	<meta http-equiv='Content-Type' content='text/html; charset=utf-8'/>
-	<title>blocker::emitter</title>
+	<title>connection::set_user_data</title>
 	<link href='reno.css' type='text/css' rel='stylesheet'/>
 </head>
 <body>
@@ -19,21 +19,14 @@
 <!-- Copyright (c) 2015 Emil Dotchevski and Reverge Studios, Inc. -->
 <!-- Distributed under the Boost Software License, Version 1.0. (See accompanying -->
 <!-- file LICENSE_1_0.txt or copy at http://www.boost.org/LICENSE_1_0.txt) -->
-<div class="RenoIncludeDIV"><div class="RenoAutoDIV"><h3>blocker::emitter</h3>
+<div class="RenoIncludeDIV"><div class="RenoAutoDIV"><h3>connection::set_user_data</h3>
 </div>
 <div class="RenoIncludeDIV"><div class="RenoIncludeDIV"><pre>template &lt;class T&gt;
-shared_ptr&lt;T&gt; <span class="RenoLink">emitter</span>() const;</pre>
-</div></div><h4>Returns:</h4>
-<p>A <i>shared_ptr</i> that points the emitter that was passed to an overload of the <i><span class="RenoLink"><a href="block.html">block</a></span></i> function template to get the <i><span class="RenoLink"><a href="blocker.html">blocker</a></span></i> object.</p>
-<h4>Notes:</h4>
-<div><ul><li> An empty <i>shared_ptr</i> is returned if:<div><ul><li> <i>T</i> does not match the static type of the emitter passed to <i><span class="RenoLink"><a href="block.html">block</a></span></i>, or</li>
-<li> the emitter was passed to <i><span class="RenoLink"><a href="block.html">block</a></span></i> as a <i>shared/weak_ptr</i> and it has expired.</li>
-</ul></div>
-</li>
-<li> If the emitter was passed to <i><span class="RenoLink"><a href="block.html">block</a></span></i> as a raw pointer, the returned <i>shared_ptr</i> points that emitter but does not (can not) keep it afloat.</li>
-</ul></div>
+void <span class="RenoLink">set_user_data</span>( shared_ptr&lt;T&gt; const &amp; data );</pre>
+</div></div><h4>Description:</h4>
+<p>Stores a copy of <i>data</i> into <i>this</i>. Use <i><span class="RenoLink"><a href="connection_get_user_data.html">connection::get_user_data</a></span></i> to access it. </p>
 </div><div class="RenoAutoDIV"><div class="RenoHR"><hr/></div>
-See also: <span class="RenoPageList"><a href="blocker.html">blocker</a></span>
+See also: <span class="RenoPageList"><a href="connection.html">connection</a>&nbsp;| <a href="connection_get_user_data.html">connection::get_user_data</a>&nbsp;| <a href="Tutorial.html">Tutorial</a>&nbsp;| <a href="using_meta_signals_to_respond_to_signals_being_blocked_or_unblocked.html">Using Meta Signals to Respond to Signals Being Blocked or Unblocked</a>&nbsp;| <a href="using_meta_signals_with_QPushButton.html">Using Meta Signals with QPushButton</a></span>
 </div>
 <!-- Copyright (c) 2008-2013 Emil Dotchevski and Reverge Studios, Inc. -->
 <!-- Distributed under the Boost Software License, Version 1.0. (See accompanying -->
