--- a/poll.html
+++ b/poll.html
@@ -3,7 +3,7 @@
 <html xmlns='http://www.w3.org/1999/xhtml' xml:lang='en' lang='en'>
 <head>
 	<meta http-equiv='Content-Type' content='text/html; charset=utf-8'/>
-	<title>blocker::emitter</title>
+	<title>poll</title>
 	<link href='reno.css' type='text/css' rel='stylesheet'/>
 </head>
 <body>
@@ -19,21 +19,24 @@
 <!-- Copyright (c) 2015 Emil Dotchevski and Reverge Studios, Inc. -->
 <!-- Distributed under the Boost Software License, Version 1.0. (See accompanying -->
 <!-- file LICENSE_1_0.txt or copy at http://www.boost.org/LICENSE_1_0.txt) -->
-<div class="RenoIncludeDIV"><div class="RenoAutoDIV"><h3>blocker::emitter</h3>
+<div class="RenoIncludeDIV"><div class="RenoAutoDIV"><h3>poll</h3>
 </div>
-<div class="RenoIncludeDIV"><div class="RenoIncludeDIV"><pre>template &lt;class T&gt;
-shared_ptr&lt;T&gt; <span class="RenoLink">emitter</span>() const;</pre>
-</div></div><h4>Returns:</h4>
-<p>A <i>shared_ptr</i> that points the emitter that was passed to an overload of the <i><span class="RenoLink"><a href="block.html">block</a></span></i> function template to get the <i><span class="RenoLink"><a href="blocker.html">blocker</a></span></i> object.</p>
-<h4>Notes:</h4>
-<div><ul><li> An empty <i>shared_ptr</i> is returned if:<div><ul><li> <i>T</i> does not match the static type of the emitter passed to <i><span class="RenoLink"><a href="block.html">block</a></span></i>, or</li>
-<li> the emitter was passed to <i><span class="RenoLink"><a href="block.html">block</a></span></i> as a <i>shared/weak_ptr</i> and it has expired.</li>
-</ul></div>
-</li>
-<li> If the emitter was passed to <i><span class="RenoLink"><a href="block.html">block</a></span></i> as a raw pointer, the returned <i>shared_ptr</i> points that emitter but does not (can not) keep it afloat.</li>
-</ul></div>
+<div class="RenoIncludeDIV"><p><span class="RenoEscape">&#35;<!--<wiki>`&#35;</wiki>--></span>include &lt;<span class="RenoLink"><a href="boost_synapse_thread_local_queue_hpp.html">boost/synapse/thread_local_queue.hpp</a></span>&gt;</p>
+<pre>namespace
+boost
+    {
+    namespace
+    synapse
+        {
+<span class="RenoIncludeSPAN">        int <span class="RenoLink">poll</span>( thread_local_queue &amp; q );</span>
+        }
+    }</pre>
+</div><h4>Effects:</h4>
+<p>Synchronously emits all signals queued asynchronously into <i>q</i> by calls to <i><span class="RenoLink"><a href="emit.html">emit</a></span></i> from other threads. See <span class="RenoLink"><a href="interthread_communication_support.html">Interthread Communication Support</a></span>.</p>
+<h4>Returns:</h4>
+<p>The total number of signals emitted.</p>
 </div><div class="RenoAutoDIV"><div class="RenoHR"><hr/></div>
-See also: <span class="RenoPageList"><a href="blocker.html">blocker</a></span>
+See also: <span class="RenoPageList"><a href="boost_synapse_thread_local_queue_hpp.html">boost/synapse/thread_local_queue.hpp</a>&nbsp;| <a href="create_thread_local_queue.html">create_thread_local_queue</a>&nbsp;| <a href="interthread_communication_support.html">Interthread Communication Support</a></span>
 </div>
 <!-- Copyright (c) 2008-2013 Emil Dotchevski and Reverge Studios, Inc. -->
 <!-- Distributed under the Boost Software License, Version 1.0. (See accompanying -->
