--- a/using_meta_signals_to_respond_to_signals_being_blocked_or_unblocked.html
+++ b/using_meta_signals_to_respond_to_signals_being_blocked_or_unblocked.html
@@ -27,9 +27,7 @@
 #include &lt;<span class="RenoLink"><a href="boost_synapse_blocker_hpp.html">boost/synapse/blocker.hpp</a></span>&gt;
 #include &lt;<span class="RenoLink"><a href="boost_synapse_connect_hpp.html">boost/synapse/connect.hpp</a></span>&gt;
 #include &lt;<span class="RenoLink"><a href="boost_synapse_connection_hpp.html">boost/synapse/connection.hpp</a></span>&gt;
-#include &lt;boost/bind.hpp&gt;
-#include &lt;boost/any.hpp&gt;
-#define QT_NO_EMIT //Suppress the #define emit from Qt since it clashes with boost::synapse::<span class="RenoLink"><a href="emit.html">emit</a></span>.
+#define QT_NO_EMIT //Suppress the #define emit from Qt since it clashes with synapse::<span class="RenoLink"><a href="emit.html">emit</a></span>.
 #include &lt;QtWidgets/QApplication&gt;
 #include &lt;QtWidgets/QDialog&gt;
 #include &lt;QtWidgets/QPushButton&gt;
@@ -43,53 +41,30 @@ namespace
     //Define a Boost Synapse signal
     typedef struct button_clicked_(*button_clicked)();
 
-    //////////////////////////////////////////////////////////////////////////////////
-
     //When the button_clicked is being connected, connect the QPushButton::clicked Qt signal to
-    //boost::synapse::<span class="RenoLink"><a href="emit.html">emit</a></span>&lt;button_clicked&gt; and store the resulting QMetaObject::Connection object
-    //into the boost::synapse::<span class="RenoLink"><a href="connection.html">connection</a></span> object. When disconnecting, disconnect the stored
+    //synapse::<span class="RenoLink"><a href="emit.html">emit</a></span>&lt;button_clicked&gt; and store the resulting QMetaObject::Connection object
+    //into the synapse::<span class="RenoLink"><a href="connection.html">connection</a></span> object. When disconnecting, disconnect the stored
     //QMetaObject::Connection object.
-    void
-    handle_button_clicked_connected_meta_signal( synapse::<span class="RenoLink"><a href="connection.html">connection</a></span> &amp; c, unsigned flags )
-        {
-        if( flags&amp;synapse::<span class="RenoLink"><a href="meta_connected.html">meta::connect_flags::connecting</a></span> )
-            {
-            boost::shared_ptr&lt;QPushButton&gt; pb=c.<span class="RenoLink"><a href="connection_emitter.html">emitter</a></span>&lt;QPushButton&gt;();
-            c.<span class="RenoLink"><a href="connection_user_data.html">user_data</a></span> = QObject::connect(pb.get(),&amp;QPushButton::clicked,
-                boost::bind(&amp;synapse::<span class="RenoLink"><a href="emit.html">emit</a></span>&lt;button_clicked&gt;,pb.get()));
-            }
-        else
-            QObject::disconnect(*boost::any_cast&lt;QMetaObject::Connection&gt;(&amp;c.<span class="RenoLink"><a href="connection_user_data.html">user_data</a></span>));
-        }
-
-    //Call the above function whenever a button_clicked signal is connected or disconnected through Boost Synapse.
     boost::shared_ptr&lt;synapse::<span class="RenoLink"><a href="connection.html">connection</a></span>&gt; meta_conn=synapse::<span class="RenoLink"><a href="connect.html">connect</a></span>&lt;synapse::<span class="RenoLink"><a href="meta_connected.html">meta::connected</a></span>&lt;button_clicked&gt; &gt;(
         synapse::<span class="RenoLink"><a href="meta_emitter.html">meta::emitter</a></span>(),
-        &amp;handle_button_clicked_connected_meta_signal );
-
-    //////////////////////////////////////////////////////////////////////////////////
+        [ ]( synapse::<span class="RenoLink"><a href="connection.html">connection</a></span> &amp; c, unsigned flags )
+            {
+            if( flags&amp;synapse::meta::connect_flags::connecting )
+                {
+                QPushButton * pb=c.emitter&lt;QPushButton&gt;().get();
+                c.<span class="RenoLink"><a href="connection_set_user_data.html">set_user_data</a></span>( QObject::connect( pb, &amp;QPushButton::clicked, [pb]() { synapse::<span class="RenoLink"><a href="emit.html">emit</a></span>&lt;button_clicked&gt;(pb); } ) );
+                }
+            else
+                QObject::disconnect(*c.<span class="RenoLink"><a href="connection_get_user_data.html">get_user_data</a></span>&lt;QMetaObject::Connection&gt;());
+            } );
 
     //Whenever the button_clicked signal is blocked, disable the button. Enable when unblocked.
-    void
-    handle_button_clicked_blocked_meta_signal( synapse::<span class="RenoLink"><a href="blocker.html">blocker</a></span> const &amp; b, bool blocked )
-        {
-        b.<span class="RenoLink"><a href="blocker_emitter.html">emitter</a></span>&lt;QPushButton&gt;()-&gt;setDisabled(blocked);
-        }
-
-    //Call the above function whenever a button_clicked signal is blocked or unblocked through Boost Synapse.
-    boost::shared_ptr&lt;synapse::<span class="RenoLink"><a href="connection.html">connection</a></span>&gt;  meta_block=synapse::<span class="RenoLink"><a href="connect.html">connect</a></span>&lt;synapse::<span class="RenoLink"><a href="meta_blocked.html">meta::blocked</a></span>&lt;button_clicked&gt; &gt;(
+    boost::shared_ptr&lt;synapse::<span class="RenoLink"><a href="connection.html">connection</a></span>&gt; meta_block=synapse::<span class="RenoLink"><a href="connect.html">connect</a></span>&lt;synapse::<span class="RenoLink"><a href="meta_blocked.html">meta::blocked</a></span>&lt;button_clicked&gt; &gt;(
         synapse::<span class="RenoLink"><a href="meta_emitter.html">meta::emitter</a></span>(),
-        &amp;handle_button_clicked_blocked_meta_signal );
-
-    //This function is connected to the appropriate Qt signals and it blocks or unblocks the button_clicked signal.
-    void
-    block_unblock( boost::shared_ptr&lt;synapse::<span class="RenoLink"><a href="blocker.html">blocker</a></span> const&gt; &amp; blk, boost::weak_ptr&lt;QPushButton&gt; const &amp; btn, bool block )
-        {
-        if( block )
-            blk=synapse::<span class="RenoLink"><a href="block.html">block</a></span>&lt;button_clicked&gt;(btn);
-        else
-            blk.reset();
-        }
+        [ ]( synapse::<span class="RenoLink"><a href="blocker.html">blocker</a></span> &amp; b, bool blocked )
+            {
+            b.<span class="RenoLink"><a href="connection_emitter.html">emitter</a></span>&lt;QPushButton&gt;()-&gt;setDisabled(blocked);
+            } );
     }
 
 int
@@ -111,17 +86,32 @@ main( int argc, char const * argv[ ] )
     boost::weak_ptr&lt;QPushButton&gt; pbw=boost::shared_ptr&lt;QPushButton&gt;(qd,pb);
 
     //accept() the QDialog when pb is clicked.
-    boost::shared_ptr&lt;synapse::<span class="RenoLink"><a href="connection.html">connection</a></span>&gt; c=synapse::<span class="RenoLink"><a href="connect.html">connect</a></span>&lt;button_clicked&gt;(pbw,boost::bind(&amp;QDialog::accept,qd.get()));
+    boost::shared_ptr&lt;synapse::<span class="RenoLink"><a href="connection.html">connection</a></span>&gt; c=synapse::<span class="RenoLink"><a href="connect.html">connect</a></span>&lt;button_clicked&gt;(pbw,[qd]() { qd-&gt;accept(); } );
 
     //Block/unblock the button_clicked Boost Synapse signal when either checkbox is toggled.
     //This simulates two conditions which independently block the button_clicked signal.
-    //The handle_button_clicked_blocked_meta_signal is called when transitioning from
-    //zero checkboxes being checked to a checkbox being checked, and when transitioning from
-    //from at least one checkbox being checked to zero checkboxes being checked.
-    boost::shared_ptr&lt;synapse::<span class="RenoLink"><a href="blocker.html">blocker</a></span> const&gt; blk1;
-    boost::shared_ptr&lt;synapse::<span class="RenoLink"><a href="blocker.html">blocker</a></span> const&gt; blk2;
-    (void) QObject::connect(cb1,&amp;QCheckBox::stateChanged,boost::bind(&amp;block_unblock,boost::ref(blk1),pbw,_1));  
-    (void) QObject::connect(cb2,&amp;QCheckBox::stateChanged,boost::bind(&amp;block_unblock,boost::ref(blk2),pbw,_1));  
+    //The lambda function connected to synapse::<span class="RenoLink"><a href="meta_connected.html">meta::connected</a></span>&lt;button_clicked&gt; (see above)
+    //is called when transitioning from zero checkboxes being checked to a checkbox being
+    //checked, and when transitioning from at least one checkbox being checked to zero
+    //checkboxes being checked.
+    boost::shared_ptr&lt;synapse::blocker&gt; blk1;
+    boost::shared_ptr&lt;synapse::blocker&gt; blk2;
+    (void) QObject::connect(cb1,&amp;QCheckBox::stateChanged,
+        [&amp;blk1,pbw]( bool block )
+            {
+            if( block )
+                blk1=synapse::<span class="RenoLink"><a href="block.html">block</a></span>&lt;button_clicked&gt;(pbw);
+            else
+                blk1.reset();
+            } );
+    (void) QObject::connect(cb2,&amp;QCheckBox::stateChanged,
+        [&amp;blk2,pbw]( bool block )
+            {
+            if( block )
+                blk2=synapse::<span class="RenoLink"><a href="block.html">block</a></span>&lt;button_clicked&gt;(pbw);
+            else
+                blk2.reset();
+            } );
 
     qd-&gt;exec();
     return 0;
