Index_of_functions.html omissions

--- a/Index_of_functions.html
+++ b/Index_of_functions.html
@@ -27,12 +27,15 @@
 <h3>c</h3>
 <p><a href="connect.html">connect</a></p>
 <p><a href="connection_emitter.html">connection::emitter</a></p>
+<p><a href="connection_get_user_data.html">connection::get_user_data</a></p>
 <p><a href="connection_set_user_data.html">connection::set_user_data</a></p>
 <p><a href="create_thread_local_queue.html">create_thread_local_queue</a></p>
 <h3>e</h3>
 <p><a href="emit.html">emit</a></p>
 <h3>m</h3>
 <p><a href="meta_emitter.html">meta::emitter</a></p>
+<h3>p</h3>
+<p><a href="poll.html">poll</a></p>
 <h3>t</h3>
 <p><a href="translate.html">translate</a></p>
 </div>
